--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">SnorLabs_a1</string>
     <string-array name="settings">
+        <item>Select</item>
         <item>Feedback</item>
         <item>Help</item>
     </string-array>
+
+    <string name="help_text">For additional support, please contact: snorlabs101@help.com</string>
+    <string name="back">Back</string>
 </resources>
