04 March 2023: All services running - known Issue ID#1 - Service is being cancelled second time sleep broadcast is received.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="feedback_beta7">6) Please provide your feedback </string>
     <string name="feedback_beta8">7) Tap Post </string>
     <string name="feedback_beta9"> Alternatively, please share your experience with snorlabs101@help.com</string>
+    <string name="titleTextInitial">Sleep timer set to:  </string>
+    <string name="debugStringInitial">Timestamp and sleepscore when available</string>
 </resources>
